[gd_scene load_steps=2 format=3 uid="uid://qcsdym220ofv"]

[ext_resource type="Script" path="res://scripts/Component.gd" id="1_tdwr8"]

[node name="GraphNode" type="GraphNode"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -192.0
offset_right = 398.0
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.988867, 1)
mouse_filter = 1
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_tdwr8")

[node name="IdLabel" type="Label" parent="."]
layout_mode = 2

[node name="Line" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ComponentName" type="Label" parent="Line"]
layout_mode = 2

[node name="ConfigureButton" type="Button" parent="Line"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Configure this component"
text = "Configure"

[node name="ConfigureFeaturesButton" type="Button" parent="Line"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Configure this component"
text = "Feature Sel."

[node name="Line2" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2

[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="pressed" from="Line/ConfigureButton" to="." method="_on_configure_button_pressed"]
[connection signal="pressed" from="Line/ConfigureFeaturesButton" to="." method="_on_configure_features_button_pressed"]
